<resources>
    <string name="app_name">Sticker Camera</string>

    <string name="crop_rotate">Rotate</string>
    <string name="crop_custom">Custom</string>
    <string name="crop_1_1">1:1</string>
    <string name="crop_4_3">4:3</string>
    <string name="crop_3_4">3:4</string>
    <string name="crop_9_16">9:16</string>
    <string name="crop_16_9">16:9</string>

    <string name="cropping">Cropping</string>
    <string name="crop_fail_tips">Try again。You can try other corp model.</string>
    <string name="saving">saving</string>

    <string name="permission_deny_tips">No Permission, You can not use this function.</string>
    <string name="cancel">cancel</string>
    <string name="go">Go</string>
    <string name="need_some_permission">Need Some permissions, please set manually</string>
    <string name="warm_tips">Warm Tips:</string>

    <string name="my_sticker">My Sticker</string>
    <string name="save_success">Save Success</string>
    <string name="right">P666 Sticker Camera</string>
    <string name="store">Sticker Store</string>
    <string name="loading">Loading...</string>
    <string name="delete">Delete</string>
    <string name="ensure_delete">Ensure Delete? </string>
    <string name="share_to">Share To</string>
    <string name="not_install_app">Not install Application</string>
    <string name="apply">Apply</string>
    <string name="download">Download</string>
    <string name="size">Size: </string>

    <string name="net_error">Network Error</string>
    <string name="retry">Retry</string>

    <string name="pause">Pause</string>
    <string name="continues">Continue</string>
    <string name="hide">Hide</string>

    <string name="download_finish">Finish</string>
    <string name="download_ing">Downloading</string>
    <string name="download_fail">Download Fail</string>

    <string name="back">Back</string>
    <string name="save_share">Save/Share</string>
    <string name="home">Home</string>
    <string name="facebook">Facebook</string>
    <string name="twtter">Twtter</string>
    <string name="line">Line</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="share_directly">Share directly</string>
    <string name="edit_next">Edit Next</string>
    <string name="not_exist_sticker">Not exist the sticker</string>
	<string name="more">More</string>
</resources>
