<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/id_sticker_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/id_sticker_detail_iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_back"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_sticker"
            android:layout_centerInParent="true"
            android:textColor="#000"
            android:textSize="18sp"/>
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/id_card_container"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/white"
        android:layout_below="@id/id_sticker_detail_toolbar"
        card_view:cardElevation="5dp"
        card_view:cardCornerRadius="3dp"
        android:visibility="invisible">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <ImageView
                android:id="@+id/id_sticker_detail_iv_type_head"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/id_sticker_detail_iv_type"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/id_sticker_detail_iv_type"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">

                    <TextView
                        android:id="@+id/id_sticker_detail_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="12sp"/>
                    <TextView
                        android:id="@+id/id_sticker_detail_tv_file_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:layout_marginTop="2dp"
                        android:textSize="10sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/id_sticker_detail_tv_download"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/download"
                    android:layout_alignParentRight="true"
                    android:background="@color/colorAccent"
                    android:textColor="@color/white"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    android:textSize="12sp"/>

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/id_sticker_detail_tv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/right"
        android:textSize="8sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/id_sticker_detail_rv_sticker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_card_container"
        android:layout_margin="10dp"
        android:layout_above="@id/id_sticker_detail_tv_right"/>

    <include layout="@layout/net_error" />


</RelativeLayout>